Bei kleinen Fonthöhen (<=8) sind 8 Zeilen auf den graphischen Display möglich.
Getrennte Kondensatormessung an TP1:TP3 ab 1pF über Menü wählbar.
Interne Struktur der Daten für die Widerstandsmessung geändert.
Getrennte Widerstandsmessung an TP1:TP3 mit Menü wählbar.
Bei BJT wird die Flußspannung der Schutzdiode mit angezeigt.
Bei D-MOS Transistoren wird auch die Gate-Kapazität gemessen.
Für den ST7108 Controller kann das CS1 / CS2 Signal invertiert werden.
Bei Fortsetzungszeile wird ein + als letztes Zeichen ausgegeben.
Die Anordnung der Meßparameter bei Transistoren wurde neu organisiert.
Bei BJT wird der Kollektor oder Emitterstrom ausgegeben, bei dem hFE gemessen wurde.
Bei Kondensatoren mit ESR wird der Widerstand auch als Symbol angezeigt bei 4-zeiligem Display.
Neuanordnung der gemessenen Parameter für graphisches Display, das Icon wird oben links gezeichnet.
Bei graphischen Display wird auf die zusätzliche Angabe der Pinbelegung und der Schutzdiode als Text verzichtet.
Interne Überarbeitung der Display-Font Parameter.
Tester kann nicht mehr ohne Abgleichkondensator kalibriert werden bei Zeitüberschreitung der C>100nF Schleife.
Überarbeitung der Icons und update bitmaps, großes Fragezeichen bei unbekannten Bauteil.
lcd_draw_trans_pins und lcd_draw_pin brauchen jetzt relative Adresse bezogen auf die Icon-Position.
ShowData Funktion um Demonstration der verwendeten Icons erweitert.
Die Funktion lcd_update_icon() arbeitet immer relativ zur letzten Icon Position.
Die Funktion lcd_big_icon() kann als Ziel eine der 4 Quadranten des LCD angeben. Standard = unten rechts.
SetCursor verwendet als vertikal Position (y) eine Auflösung von 8 Pixel, unabhängig von der Fonthöhe.
Verschiedene Versionen der Transistor-Icons sind mit ICON_TYPE wählbar (1=thin, 2=bold).
Die Spule wird bei graphischer Ausgabe mit zwei neuen Zeichen, beim Character-display mit "-ww-" gezeichnet.