@@ -1,3 +1,8 @@
+Beim Kondensator-Meßmodus wird bei Displays mit mehr als 2 Zeilen auch Vloss angezeigt.
+Bei Kondensatoren an TP1:TP3 wechselt das Programm automatisch in den Kondensator-Meßmodus,
+ der durch Tastendruck wieder beendet wird.
+Bei Einzelwiderständen an TP1:TP3 wechselt das Programm automatisch in den Widerstands-Meßmodus,
+  bei Tastendruck wird der Modus beendet.
 Bei kleinen Fonthöhen (<=8) sind 8 Zeilen auf den graphischen Display möglich.
 Getrennte Kondensatormessung an TP1:TP3 ab 1pF über Menü wählbar.
 Interne Struktur der Daten für die Widerstandsmessung geändert.
